fix: lighter checkbox accent-color (#aaa) for higher contrast

--- a/scss/module.scss
+++ b/scss/module.scss
@@ -217,7 +217,7 @@
     input {
         margin: 0;
         cursor: pointer;
-        accent-color: #777;
+        accent-color: #aaa;
     }
 }
 
@@ -269,7 +269,7 @@
     input {
         margin: 0;
         cursor: pointer;
-        accent-color: #777;
+        accent-color: #aaa;
     }
 }
 
@@ -324,7 +324,7 @@
     input {
         margin: 0;
         cursor: pointer;
-        accent-color: #777;
+        accent-color: #aaa;
     }
 
     .qc-feature-name {
